# vehicle-status-scan

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_tables.py  002_add_inspectors.py  003_add_inspections.py
scripts/: create_tables.py  create_test_inspectors.py  init_db.sql  setup_database.py
src/vehicle_inspection/application/ports/: repositories.py
src/vehicle_inspection/application/services/: auth_service.py  booking_service.py  inspection_service.py
src/vehicle_inspection/domain/entities/: booking.py  inspection.py  inspector.py  vehicle.py
src/vehicle_inspection/domain/value_objects/: auth.py  checkpoint_score.py  checkpoint_types.py  safety_result.py  time_slot.py
src/vehicle_inspection/infrastructure/: logging.py  services.py
src/vehicle_inspection/infrastructure/database/: connection.py  models.py
src/vehicle_inspection/infrastructure/repositories/: memory_repositories.py  simple_booking_service.py  sql_repositories.py
src/vehicle_inspection/presentation/api/: config.py  main.py
src/vehicle_inspection/presentation/api/middleware/: __init__.py  auth.py  logging.py
src/vehicle_inspection/presentation/api/routes/: auth.py  bookings.py  health.py  inspections.py  reports.py  vehicles.py
src/vehicle_inspection/presentation/api/schemas/: booking_schemas.py  booking_schemas_simple.py
tests/: simple_test_runner.py
tests/integration/: test_booking_api.py
tests/unit/: test_003_inspections_migration.py  test_auth_service.py  test_auth_value_objects.py  test_booking_entities.py  test_booking_service.py  test_inspection_entity.py  test_inspection_model.py  test_inspection_repository_interface.py  test_time_slot.py  test_vehicle_entities.py
